4TP/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On WHILE shift to state 1
-- On VAR shift to state 51
-- On PRINT shift to state 57
-- On NOT shift to state 2
-- On NEWLINE shift to state 60
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 62
-- On FOR shift to state 66
-- On EXIT shift to state 73
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On BEGIN shift to state 50
-- On prog shift to state 88
-- On list(instr) shift to state 89
-- On instr shift to state 77
-- On expr shift to state 79
-- On const shift to state 28
-- On block shift to state 86
-- On EOF reduce production list(instr) -> 

State 1:
instr -> WHILE . expr block [ WHILE VAR PRINT NOT NEWLINE MINUS LSPAREN LPAREN IF IDENT FOR EXIT EOF END CONST_INT CONST_BOOL BEGIN ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On expr shift to state 49
-- On const shift to state 28

State 2:
expr -> NOT . expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On expr shift to state 48
-- On const shift to state 28

State 3:
expr -> MINUS . expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On expr shift to state 47
-- On const shift to state 28

State 4:
expr -> LSPAREN . expr RSPAREN [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On expr shift to state 45
-- On const shift to state 28

State 5:
expr -> LPAREN . expr RPAREN [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On expr shift to state 43
-- On const shift to state 28

State 6:
expr -> IF . expr THEN expr ELSE expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On expr shift to state 10
-- On const shift to state 28

State 7:
expr -> IDENT . [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On TO reduce production expr -> IDENT 
-- On THEN reduce production expr -> IDENT 
-- On SEMI reduce production expr -> IDENT 
-- On RSPAREN reduce production expr -> IDENT 
-- On RPAREN reduce production expr -> IDENT 
-- On PLUS reduce production expr -> IDENT 
-- On OR reduce production expr -> IDENT 
-- On NEQ reduce production expr -> IDENT 
-- On MULT reduce production expr -> IDENT 
-- On MINUS reduce production expr -> IDENT 
-- On LT reduce production expr -> IDENT 
-- On LSPAREN reduce production expr -> IDENT 
-- On LE reduce production expr -> IDENT 
-- On GT reduce production expr -> IDENT 
-- On GE reduce production expr -> IDENT 
-- On EQ reduce production expr -> IDENT 
-- On ELSE reduce production expr -> IDENT 
-- On DIV reduce production expr -> IDENT 
-- On BEGIN reduce production expr -> IDENT 
-- On AND reduce production expr -> IDENT 

State 8:
const -> CONST_INT . [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On TO reduce production const -> CONST_INT 
-- On THEN reduce production const -> CONST_INT 
-- On SEMI reduce production const -> CONST_INT 
-- On RSPAREN reduce production const -> CONST_INT 
-- On RPAREN reduce production const -> CONST_INT 
-- On PLUS reduce production const -> CONST_INT 
-- On OR reduce production const -> CONST_INT 
-- On NEQ reduce production const -> CONST_INT 
-- On MULT reduce production const -> CONST_INT 
-- On MINUS reduce production const -> CONST_INT 
-- On LT reduce production const -> CONST_INT 
-- On LSPAREN reduce production const -> CONST_INT 
-- On LE reduce production const -> CONST_INT 
-- On GT reduce production const -> CONST_INT 
-- On GE reduce production const -> CONST_INT 
-- On EQ reduce production const -> CONST_INT 
-- On ELSE reduce production const -> CONST_INT 
-- On DIV reduce production const -> CONST_INT 
-- On BEGIN reduce production const -> CONST_INT 
-- On AND reduce production const -> CONST_INT 

State 9:
const -> CONST_BOOL . [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On TO reduce production const -> CONST_BOOL 
-- On THEN reduce production const -> CONST_BOOL 
-- On SEMI reduce production const -> CONST_BOOL 
-- On RSPAREN reduce production const -> CONST_BOOL 
-- On RPAREN reduce production const -> CONST_BOOL 
-- On PLUS reduce production const -> CONST_BOOL 
-- On OR reduce production const -> CONST_BOOL 
-- On NEQ reduce production const -> CONST_BOOL 
-- On MULT reduce production const -> CONST_BOOL 
-- On MINUS reduce production const -> CONST_BOOL 
-- On LT reduce production const -> CONST_BOOL 
-- On LSPAREN reduce production const -> CONST_BOOL 
-- On LE reduce production const -> CONST_BOOL 
-- On GT reduce production const -> CONST_BOOL 
-- On GE reduce production const -> CONST_BOOL 
-- On EQ reduce production const -> CONST_BOOL 
-- On ELSE reduce production const -> CONST_BOOL 
-- On DIV reduce production const -> CONST_BOOL 
-- On BEGIN reduce production const -> CONST_BOOL 
-- On AND reduce production const -> CONST_BOOL 

State 10:
expr -> expr . LSPAREN expr RSPAREN [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . PLUS expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . MINUS expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . MULT expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . DIV expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . AND expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . OR expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . EQ expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . NEQ expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . LT expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . LE expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . GT expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . GE expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> IF expr . THEN expr ELSE expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On THEN shift to state 11
-- On PLUS shift to state 13
-- On OR shift to state 20
-- On NEQ shift to state 22
-- On MULT shift to state 15
-- On MINUS shift to state 24
-- On LT shift to state 29
-- On LSPAREN shift to state 17
-- On LE shift to state 31
-- On GT shift to state 33
-- On GE shift to state 35
-- On EQ shift to state 37
-- On DIV shift to state 26
-- On AND shift to state 39

State 11:
expr -> IF expr THEN . expr ELSE expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On expr shift to state 12
-- On const shift to state 28

State 12:
expr -> expr . LSPAREN expr RSPAREN [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . PLUS expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . MINUS expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . MULT expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . DIV expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . AND expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . OR expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . EQ expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . NEQ expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . LT expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . LE expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . GT expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . GE expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> IF expr THEN expr . ELSE expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On PLUS shift to state 13
-- On OR shift to state 20
-- On NEQ shift to state 22
-- On MULT shift to state 15
-- On MINUS shift to state 24
-- On LT shift to state 29
-- On LSPAREN shift to state 17
-- On LE shift to state 31
-- On GT shift to state 33
-- On GE shift to state 35
-- On EQ shift to state 37
-- On ELSE shift to state 41
-- On DIV shift to state 26
-- On AND shift to state 39

State 13:
expr -> expr PLUS . expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On expr shift to state 14
-- On const shift to state 28

State 14:
expr -> expr . LSPAREN expr RSPAREN [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . PLUS expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr PLUS expr . [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . MINUS expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . MULT expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . DIV expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . AND expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . OR expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . EQ expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . NEQ expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . LT expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . LE expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . GT expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . GE expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On MULT shift to state 15
-- On LSPAREN shift to state 17
-- On DIV shift to state 26
-- On TO reduce production expr -> expr PLUS expr 
-- On THEN reduce production expr -> expr PLUS expr 
-- On SEMI reduce production expr -> expr PLUS expr 
-- On RSPAREN reduce production expr -> expr PLUS expr 
-- On RPAREN reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On OR reduce production expr -> expr PLUS expr 
-- On NEQ reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On LT reduce production expr -> expr PLUS expr 
-- On LE reduce production expr -> expr PLUS expr 
-- On GT reduce production expr -> expr PLUS expr 
-- On GE reduce production expr -> expr PLUS expr 
-- On EQ reduce production expr -> expr PLUS expr 
-- On ELSE reduce production expr -> expr PLUS expr 
-- On BEGIN reduce production expr -> expr PLUS expr 
-- On AND reduce production expr -> expr PLUS expr 

State 15:
expr -> expr MULT . expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On expr shift to state 16
-- On const shift to state 28

State 16:
expr -> expr . LSPAREN expr RSPAREN [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . PLUS expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . MINUS expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . MULT expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr MULT expr . [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . DIV expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . AND expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . OR expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . EQ expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . NEQ expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . LT expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . LE expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . GT expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . GE expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On LSPAREN shift to state 17
-- On TO reduce production expr -> expr MULT expr 
-- On THEN reduce production expr -> expr MULT expr 
-- On SEMI reduce production expr -> expr MULT expr 
-- On RSPAREN reduce production expr -> expr MULT expr 
-- On RPAREN reduce production expr -> expr MULT expr 
-- On PLUS reduce production expr -> expr MULT expr 
-- On OR reduce production expr -> expr MULT expr 
-- On NEQ reduce production expr -> expr MULT expr 
-- On MULT reduce production expr -> expr MULT expr 
-- On MINUS reduce production expr -> expr MULT expr 
-- On LT reduce production expr -> expr MULT expr 
-- On LE reduce production expr -> expr MULT expr 
-- On GT reduce production expr -> expr MULT expr 
-- On GE reduce production expr -> expr MULT expr 
-- On EQ reduce production expr -> expr MULT expr 
-- On ELSE reduce production expr -> expr MULT expr 
-- On DIV reduce production expr -> expr MULT expr 
-- On BEGIN reduce production expr -> expr MULT expr 
-- On AND reduce production expr -> expr MULT expr 

State 17:
expr -> expr LSPAREN . expr RSPAREN [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On expr shift to state 18
-- On const shift to state 28

State 18:
expr -> expr . LSPAREN expr RSPAREN [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr LSPAREN expr . RSPAREN [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
expr -> expr . PLUS expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . MINUS expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . MULT expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . DIV expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . AND expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . OR expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . EQ expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . NEQ expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . LT expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . LE expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . GT expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . GE expr [ RSPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
-- On RSPAREN shift to state 19
-- On PLUS shift to state 13
-- On OR shift to state 20
-- On NEQ shift to state 22
-- On MULT shift to state 15
-- On MINUS shift to state 24
-- On LT shift to state 29
-- On LSPAREN shift to state 17
-- On LE shift to state 31
-- On GT shift to state 33
-- On GE shift to state 35
-- On EQ shift to state 37
-- On DIV shift to state 26
-- On AND shift to state 39

State 19:
expr -> expr LSPAREN expr RSPAREN . [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On TO reduce production expr -> expr LSPAREN expr RSPAREN 
-- On THEN reduce production expr -> expr LSPAREN expr RSPAREN 
-- On SEMI reduce production expr -> expr LSPAREN expr RSPAREN 
-- On RSPAREN reduce production expr -> expr LSPAREN expr RSPAREN 
-- On RPAREN reduce production expr -> expr LSPAREN expr RSPAREN 
-- On PLUS reduce production expr -> expr LSPAREN expr RSPAREN 
-- On OR reduce production expr -> expr LSPAREN expr RSPAREN 
-- On NEQ reduce production expr -> expr LSPAREN expr RSPAREN 
-- On MULT reduce production expr -> expr LSPAREN expr RSPAREN 
-- On MINUS reduce production expr -> expr LSPAREN expr RSPAREN 
-- On LT reduce production expr -> expr LSPAREN expr RSPAREN 
-- On LSPAREN reduce production expr -> expr LSPAREN expr RSPAREN 
-- On LE reduce production expr -> expr LSPAREN expr RSPAREN 
-- On GT reduce production expr -> expr LSPAREN expr RSPAREN 
-- On GE reduce production expr -> expr LSPAREN expr RSPAREN 
-- On EQ reduce production expr -> expr LSPAREN expr RSPAREN 
-- On ELSE reduce production expr -> expr LSPAREN expr RSPAREN 
-- On DIV reduce production expr -> expr LSPAREN expr RSPAREN 
-- On BEGIN reduce production expr -> expr LSPAREN expr RSPAREN 
-- On AND reduce production expr -> expr LSPAREN expr RSPAREN 

State 20:
expr -> expr OR . expr [ TO THEN SEMI RSPAREN RPAREN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LSPAREN shift to state 4
-- On LPAREN shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 8
-- On CONST_BOOL shift to state 9
-- On expr shift to state 21
-- On const shift to state 28
